# voicetype

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  voicetype-server.spec
.cursor/rules/: DEV_STANDARDS.mdc  UI_DESIGN_GUIDE.mdc
.github/workflows/: build-release.yml
scripts/: download_models.py  download_voiceprint_model.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar.rs
src-ui/: floating.html  index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.vue  floating.ts  main.ts
src-ui/src-tauri/binaries/_internal/email_validator-2.3.0.dist-info/: RECORD
src-ui/src-tauri/binaries/_internal/voicetype/: config.py  engine.py  main.py
src-ui/src-tauri/binaries/_internal/voicetype/api/: config_routes.py
src-ui/src-tauri/binaries/_internal/voicetype/pipeline/: intent_prompt.py  rule_replacer.py
src-ui/src-tauri/binaries/_internal/voicetype/platform/: hotkey_listener.py  microphone.py
src-ui/src-tauri/binaries/_internal/voicetype/platform/voiceprint/: __init__.py  aliyun_service.py  base.py  factory.py
src-ui/src-tauri/binaries/_internal/voicetype/utils/: path_helper.py
src-ui/src-tauri/binaries/_internal/voicetype/voiceforge/core/: __init__.py  config.py  error_handler.py  extension.py
src-ui/src-tauri/binaries/_internal/voicetype/voiceforge/extensions/: __init__.py
src-ui/src-tauri/binaries/_internal/voicetype/voiceforge/extensions/providers/aliyun/: __init__.py
src-ui/src-tauri/binaries/_internal/voicetype/voiceforge/extensions/providers/sherpa/: __init__.py  asr_sherpa.py  kws_sherpa.py
src-ui/src-tauri/binaries/_internal/voicetype/voiceforge/extensions/providers/tencent/: __init__.py
src-ui/src/components/: FloatingWidget.vue  OnboardingGuide.vue  RuleManager.vue  SceneManager.vue  StatusBar.vue  VoiceprintManager.vue
src-ui/src/composables/: useApi.ts  useWebSocket.ts
src-ui/src/utils/: configMigration.ts
src-ui/src/views/: SettingsView.vue
voicetype/: __init__.py  __main__.py  config.py  engine.py  main.py
voicetype/api/: __init__.py  config_routes.py  kb_routes.py  routes.py  rule_routes.py  scene_routes.py  voiceprint_routes.py
voicetype/context/: __init__.py  scene_classifier.py
voicetype/pipeline/: __init__.py  intent_prompt.py  rule_replacer.py  safety.py  voice_pipeline.py
voicetype/platform/: __init__.py  floating_widget.py  keyboard_output.py  microphone.py  qdrant_server.py  scene_manager.py  window_watcher.py
voicetype/platform/voiceprint/: aliyun_token.py  factory.py  local_service.py
voicetype/utils/: __init__.py  path_helper.py
voicetype/voiceforge/: __init__.py
voicetype/voiceforge/core/: config.py  extension.py  lifecycle.py  message.py
voicetype/voiceforge/extensions/: __init__.py  base_asr.py  rag_local.py
voicetype/voiceforge/extensions/providers/: __init__.py
voicetype/voiceforge/extensions/providers/aliyun/: asr_qwen.py
voicetype/voiceforge/extensions/providers/tencent/: asr_tencent.py
voicetype/web/: app.js  index.html  style.css
