[package]
name = "voicetype"
version = "0.1.0"
edition = "2021"
description = "VoiceType - AI Voice Input Desktop App"
license = "AGPL-3.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
log = "0.4"
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
